# scribd-dl

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.ini  docker-download.sh  engine.ts  eslint.config.js  package-lock.json  package.json  page_html.txt  run.js  run.ts  test_scribd.js  tsconfig.json  tui.ts
.zed/: settings.json
app/: index.html  package.json
app/src/: App.tsx  index.css
app/test/: QueueItem.test.tsx  disconnect.test.tsx  smoke.test.tsx  useEngineState.test.tsx
apps/desktop/: .gitignore  README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  quit_guard.rs  sidecar.rs
apps/tui/: package.json  tsconfig.json  tui.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
docs/brainstorms/: 2026-06-09-desktop-app-tauri-bun-requirements.md  2026-06-09-download-engine-extraction-requirements.md  2026-06-09-effect-ts-rewrite-requirements.md  2026-06-09-tauri-app-requirements.md  2026-06-10-monorepo-migration-requirements.md  2026-06-10-persistence-config-and-jobs-requirements.md  2026-06-11-queue-polish-requirements.md  (+8 more)
scripts/: build-tui.ts  dev-spa.ts  dev-tui.ts
src/: App.js  App.ts
test/: App.test.js  App.test.ts  ConfigLoader.test.js  ConfigLoader.test.ts  DirectoryIo.test.ts  DomainErrors.test.ts  DownloadEngine.test.ts  PdfGenerator.test.ts  ScribdDownloader.test.ts  UrlListReader.test.js  UrlListReader.test.ts  runCli.test.ts
(+146 files in other folders)
